fix: primary background color

--- a/src/app/layout/admin/components/navbar/navbar-mobile-menu/navbar-mobile-menu.component.html
+++ b/src/app/layout/admin/components/navbar/navbar-mobile-menu/navbar-mobile-menu.component.html
@@ -1,6 +1,6 @@
 <div class="sm:hidden">
 	<div class="space-y-2 px-6 pt-2 pb-3">
-		<a class="bg-primary block rounded-md px-3 py-2 text-sm font-medium text-white" aria-current="page"
+		<a class="block rounded-md bg-primary-500 px-3 py-2 text-sm font-medium text-white" aria-current="page"
 			>Dashboard</a
 		>
 
