--- a/src/app/layout/admin/components/navbar/navbar-menu/navbar-menu.component.html
+++ b/src/app/layout/admin/components/navbar/navbar-menu/navbar-menu.component.html
@@ -2,7 +2,7 @@
 	<div class="flex flex-shrink-0 items-center">
 		<!-- Logo  -->
 		<div class="flex items-center lg:hidden">
-			<a class="bg-primary flex items-center justify-center rounded p-2 focus:outline-none focus:ring-1">
+			<a class="flex items-center justify-center rounded bg-primary-500 p-2 focus:outline-none focus:ring-1">
 				<svg-icon src="assets/icons/logo.svg"> [svgClass]="'h-5 w-5'"> </svg-icon>
 			</a>
 			<b class="pl-3 text-sm font-bold dark:text-night-50"> Finance </b>
