--- a/src/app/layout/admin/components/sidebar/sidebar.component.html
+++ b/src/app/layout/admin/components/sidebar/sidebar.component.html
@@ -6,7 +6,7 @@
 		<div class="relative h-10">
 			<div class="flex items-center" *ngIf="isOpen">
 				<a class="flex items-center justify-center rounded bg-primary-500 p-2 focus:outline-none focus:ring-1">
-					<svg-icon src="assets/icons/logo.svg"> [svgClass]="'h-5 w-5'"> </svg-icon>
+					<svg-icon src="assets/icons/logo.svg"> </svg-icon>
 				</a>
 				<b class="ml-1 pl-2 text-sm font-bold dark:text-night-50">
 					{{ appJson.name }}
