--- a/src/app/layout/admin/components/sidebar/sidebar.component.html
+++ b/src/app/layout/admin/components/sidebar/sidebar.component.html
@@ -1,6 +1,6 @@
 <nav
 	[ngClass]="isOpen ? 'w-52 xl:w-64' : 'w-[70px]'"
-	class="hidden h-full flex-col justify-between overflow-y-auto bg-white pt-3 transition-all duration-300 dark:bg-night-700 lg:flex">
+	class="hidden h-full flex-col justify-between overflow-auto bg-white pt-3 transition-all duration-300 dark:bg-night-700 lg:flex">
 	<div class="px-4">
 		<!-- Logo -->
 		<div class="relative h-10">
