--- a/src/app/layout/admin/components/sidebar/sidebar-menu/sidebar-menu.component.html
+++ b/src/app/layout/admin/components/sidebar/sidebar-menu/sidebar-menu.component.html
@@ -19,10 +19,10 @@
 				<div
 					*ngIf="!item.children"
 					routerLink="{{ item.route }}"
-					class="flex h-9 cursor-pointer items-center justify-start rounded text-gray-600 hover:bg-gray-100 dark:hover:bg-night-600">
+					class="flex h-9 cursor-pointer items-center justify-start rounded text-gray-600 hover:bg-gray-100 dark:text-night-100 dark:hover:bg-night-600">
 					<a
 						routerLinkActive="text-primary-500"
-						class="ml-10 truncate text-xs font-semibold tracking-wide focus:outline-none dark:text-night-100">
+						class="ml-10 truncate text-xs font-semibold tracking-wide focus:outline-none">
 						{{ item.label }}
 					</a>
 				</div>
