--- a/src/app/layout/admin/components/sidebar/sidebar-menu/sidebar-menu.component.html
+++ b/src/app/layout/admin/components/sidebar/sidebar-menu/sidebar-menu.component.html
@@ -11,7 +11,7 @@
 			<div (click)="toggleMenu(item)" class="group relative text-gray-400 dark:text-night-400">
 				<!-- Icon -->
 				<div
-					[ngClass]="isActive(item.route) && !isOpen ? 'text-primary-500' : ''"
+					[ngClass]="item.active && !isOpen ? 'text-primary-500' : ''"
 					class="pointer-events-none absolute m-2">
 					<svg-icon src="{{ item.icon }}" [svgClass]="'h-5 w-5'"> </svg-icon>
 				</div>
