--- a/src/app/layout/admin/components/sidebar/sidebar-menu/sidebar-menu.component.html
+++ b/src/app/layout/admin/components/sidebar/sidebar-menu/sidebar-menu.component.html
@@ -1,6 +1,8 @@
 <div class="pt-4" *ngFor="let menu of menuItem">
 	<div class="mx-1 mb-2 flex items-center justify-between">
-		<small [ngClass]="{ hidden: !isOpen }" class="text-xs font-semibold text-gray-400 dark:text-night-200">
+		<small
+			[ngClass]="{ hidden: !(isOpen$ | async) }"
+			class="text-xs font-semibold text-gray-400 dark:text-night-200">
 			{{ menu.group }}
 		</small>
 	</div>
@@ -11,7 +13,7 @@
 			<div (click)="toggleMenu(item)" class="group relative text-gray-400 dark:text-night-400">
 				<!-- Icon -->
 				<div
-					[ngClass]="item.active && !isOpen ? 'text-primary-500' : ''"
+					[ngClass]="item.active && !(isOpen$ | async) ? 'text-primary-500' : ''"
 					class="pointer-events-none absolute m-2">
 					<svg-icon src="{{ item.icon }}" [svgClass]="'h-5 w-5'"> </svg-icon>
 				</div>
@@ -40,13 +42,13 @@
 				<!-- Arrow Icon -->
 				<button
 					*ngIf="item.children"
-					[ngClass]="{ hidden: !isOpen, 'rotate-90': item.expanded }"
+					[ngClass]="{ hidden: !(isOpen$ | async), 'rotate-90': item.expanded }"
 					class="pointer-events-none absolute top-1 right-0 flex items-center p-1 text-gray-400 transition-all duration-500 dark:text-night-400">
 					<svg-icon src="assets/icons/solid/chevron-right.svg" [svgClass]="'h-5 w-5'"> </svg-icon>
 				</button>
 
 				<!-- Tooltip -->
-				<div class="fixed w-full" *ngIf="!isOpen">
+				<div class="fixed w-full" *ngIf="!(isOpen$ | async)">
 					<span
 						class="z-1 absolute left-12 -top-[34px] w-auto min-w-max origin-left scale-0 rounded-md bg-black p-2 text-xs font-bold text-white shadow-md transition-all duration-200 group-hover:scale-100 dark:bg-white dark:text-night-900">
 						{{ item.label }}
@@ -55,7 +57,7 @@
 			</div>
 
 			<!-- Submenu items -->
-			<app-sidebar-submenu [submenu]="item" [isOpen]="isOpen"></app-sidebar-submenu>
+			<app-sidebar-submenu [submenu]="item"></app-sidebar-submenu>
 		</li>
 	</ul>
 
