--- a/src/app/layout/admin/components/sidebar/sidebar.component.html
+++ b/src/app/layout/admin/components/sidebar/sidebar.component.html
@@ -26,7 +26,7 @@
 		</div>
 
 		<!-- Menu Items -->
-		<app-sidebar-menu [menuItem]="pagesMenu"> </app-sidebar-menu>
+		<app-sidebar-menu></app-sidebar-menu>
 	</div>
 
 	<div class="mx-4 my-4 space-y-1">
