--- a/src/app/layout/admin/components/navbar/navbar.component.html
+++ b/src/app/layout/admin/components/navbar/navbar.component.html
@@ -17,7 +17,7 @@
 			</div>
 
 			<!-- Desktop Menu  -->
-			<app-navbar-menu [pagesMenu]="pagesMenu"></app-navbar-menu>
+			<app-navbar-menu></app-navbar-menu>
 
 			<!-- Right items -->
 			<div class="absolute inset-y-0 right-0 flex items-center pr-2 sm:static sm:inset-auto sm:ml-6 sm:pr-0">
@@ -28,5 +28,5 @@
 	</div>
 
 	<!-- Mobile menu -->
-	<app-navbar-mobile-menu [pagesMenu]="pagesMenu"></app-navbar-mobile-menu>
+	<app-navbar-mobile-menu></app-navbar-mobile-menu>
 </nav>
