refactor: navbar menu

--- a/src/app/layout/admin/components/navbar/navbar.component.html
+++ b/src/app/layout/admin/components/navbar/navbar.component.html
@@ -1,8 +1,7 @@
-<!-- This example requires Tailwind CSS v2.0+ -->
-<div class="relative bg-white">
-	<div class="mx-auto max-w-7xl px-4 sm:px-6">
-		<div class="flex items-center justify-between border-b-2 border-gray-100 py-6 md:justify-start md:space-x-10">
-			<div class="flex justify-start lg:w-0 lg:flex-1">
+<div class="relative bg-white dark:bg-night-700">
+	<div class="mx-auto px-4">
+		<div class="flex items-center justify-between py-2.5 md:justify-start md:space-x-10">
+			<div class="flex justify-start lg:hidden">
 				<a href="#">
 					<span class="sr-only">Workflow</span>
 					<img
@@ -11,7 +10,7 @@
 						alt="" />
 				</a>
 			</div>
-			<!-- Mobile Navigation Menu-->
+			<!-- Mobile Navigation Menu Button-->
 			<div class="-my-2 -mr-2 md:hidden">
 				<button
 					(click)="toggleMobileMenu()"
@@ -35,6 +34,8 @@
 					</svg>
 				</button>
 			</div>
+
+			<!-- Desktop Menu -->
 			<nav class="hidden space-x-10 md:flex">
 				<div class="relative">
 					<!-- Item active: "text-gray-900", Item inactive: "text-gray-500" -->
@@ -409,15 +410,10 @@
 					</div>
 				</div>
 			</nav>
-			<div class="hidden items-center justify-end md:flex md:flex-1 lg:w-0">
-				<a href="#" class="whitespace-nowrap text-base font-medium text-gray-500 hover:text-gray-900">
-					Sign in
-				</a>
-				<a
-					href="#"
-					class="ml-8 inline-flex items-center justify-center whitespace-nowrap rounded-md border border-transparent bg-indigo-600 px-4 py-2 text-base font-medium text-white shadow-sm hover:bg-indigo-700">
-					Sign up
-				</a>
+
+			<!-- Profile menu -->
+			<div class="items-center justify-end md:flex md:flex-1 lg:w-0">
+				<app-profile-menu></app-profile-menu>
 			</div>
 		</div>
 	</div>
