--- a/src/app/layout/admin/components/navbar/navbar-mobile-menu/navbar-mobile-menu.component.html
+++ b/src/app/layout/admin/components/navbar/navbar-mobile-menu/navbar-mobile-menu.component.html
@@ -1,18 +1,17 @@
 <!--
-	  Mobile menu, show/hide based on mobile menu state.
-  
-	  Entering: "duration-200 ease-out"
+	Mobile menu, show/hide based on mobile menu state.
+	Entering: "duration-200 ease-out"
 		From: "opacity-0 scale-95"
 		To: "opacity-100 scale-100"
-	  Leaving: "duration-100 ease-in"
+	Leaving: "duration-100 ease-in"
 		From: "opacity-100 scale-100"
 		To: "opacity-0 scale-95"
-	-->
+-->
 <div
 	[ngClass]="
 		(showMobileMenu$ | async)
-			? 'scale-100 opacity-100 duration-200 ease-out'
-			: ' scale-95 opacity-0 duration-100 ease-in'
+			? 'pointer-events-auto scale-100 opacity-100 duration-200 ease-out'
+			: 'pointer-events-none scale-95 opacity-0 duration-100 ease-in'
 	"
 	class="absolute inset-x-0 top-0 z-0 origin-top-right transform p-2 transition md:hidden">
 	<div class="divide-y-2 divide-gray-50 rounded-lg bg-white shadow-lg ring-1 ring-black ring-opacity-5">
