feat: change animation

--- a/src/app/layout/admin/components/navbar/navbar-mobile-menu/navbar-mobile-menu.component.html
+++ b/src/app/layout/admin/components/navbar/navbar-mobile-menu/navbar-mobile-menu.component.html
@@ -13,7 +13,7 @@
 			? 'pointer-events-auto scale-100 opacity-100 duration-200 ease-out'
 			: 'pointer-events-none scale-95 opacity-0 duration-100 ease-in'
 	"
-	class="absolute inset-x-0 top-0 z-0 origin-top-right transform p-2 transition md:hidden">
+	class="absolute inset-x-0 top-0 origin-top-right transform p-2 transition md:hidden">
 	<div class="divide-y-2 divide-gray-50 rounded-lg bg-white shadow-lg ring-1 ring-black ring-opacity-5">
 		<div class="px-5 pt-5 pb-6">
 			<div class="flex items-center justify-between">
