refactor: navbar menu

--- a/src/app/layout/admin/components/navbar/profile-menu/profile-menu.component.html
+++ b/src/app/layout/admin/components/navbar/profile-menu/profile-menu.component.html
@@ -2,7 +2,7 @@
 	<!-- Profile Button -->
 	<button
 		(click)="toggleMenu()"
-		class="relative flex rounded-full bg-gray-800 text-sm focus:outline-none"
+		class="relative flex rounded-full bg-gray-800 text-sm"
 		type="button"
 		aria-expanded="false"
 		aria-haspopup="true">
