--- a/src/app/layout/admin/components/navbar/navbar.component.html
+++ b/src/app/layout/admin/components/navbar/navbar.component.html
@@ -1,33 +1,21 @@
 <div class="relative bg-white dark:bg-night-700">
-	<div class="mx-auto px-4">
-		<div class="flex items-center justify-between py-2.5 md:justify-start">
+	<div class="mx-auto px-5">
+		<div class="flex items-center justify-between py-3.5 md:justify-start">
 			<!-- Mobile Navigation Menu Button-->
 			<div class="sm:order-1 md:hidden">
 				<button
 					(click)="toggleMobileMenu()"
 					type="button"
-					class="inline-flex items-center justify-center rounded-md bg-white p-2 text-gray-400 hover:bg-gray-100 hover:text-gray-500 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-indigo-500"
+					class="inline-flex items-center justify-center rounded-md bg-white p-2 text-gray-400 hover:bg-gray-100 hover:text-gray-500 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-primary-500 dark:bg-night-700 dark:text-night-200 dark:hover:text-night-400"
 					aria-expanded="false">
-					<!-- <span class="sr-only">Open menu</span> -->
+					<span class="sr-only">Open menu</span>
 					<!-- Heroicon name: outline/menu -->
-					<svg
-						class="h-6 w-6"
-						xmlns="http://www.w3.org/2000/svg"
-						fill="none"
-						viewBox="0 0 24 24"
-						stroke="currentColor"
-						aria-hidden="true">
-						<path
-							stroke-linecap="round"
-							stroke-linejoin="round"
-							stroke-width="2"
-							d="M4 6h16M4 12h16M4 18h16" />
-					</svg>
+					<svg-icon src="assets/icons/outline/menu.svg" [svgClass]="'h-6 w-6'"> </svg-icon>
 				</button>
 			</div>
 
 			<!-- Logo -->
-			<div class="flex items-center justify-start sm:order-2 lg:hidden">
+			<div class="flex items-center justify-start sm:order-2 md:mr-10 lg:hidden">
 				<a class="flex items-center justify-center rounded bg-primary-500 p-2 focus:outline-none focus:ring-1">
 					<svg-icon src="assets/icons/logo.svg"> [svgClass]="'h-5 w-5 text-red'"> </svg-icon>
 				</a>
@@ -35,380 +23,9 @@
 			</div>
 
 			<!-- Desktop Menu -->
-			<nav class="hidden space-x-10 sm:order-3 md:flex">
-				<div class="relative">
-					<!-- Item active: "text-gray-900", Item inactive: "text-gray-500" -->
-					<button
-						type="button"
-						class="group inline-flex items-center rounded-md bg-white text-base font-medium text-gray-500 hover:text-gray-900 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2"
-						aria-expanded="false">
-						<span>Solutions</span>
-						<!-- Heroicon name: solid/chevron-down
-							Item active: "text-gray-600", Item inactive: "text-gray-400"-->
-						<svg
-							class="ml-2 h-5 w-5 text-gray-400 group-hover:text-gray-500"
-							xmlns="http://www.w3.org/2000/svg"
-							viewBox="0 0 20 20"
-							fill="currentColor"
-							aria-hidden="true">
-							<path
-								fill-rule="evenodd"
-								d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
-								clip-rule="evenodd" />
-						</svg>
-					</button>
-
-					<!--
-			  'Solutions' flyout menu, show/hide based on flyout menu state.
-  
-			  Entering: "transition ease-out duration-200"
-				From: "opacity-0 translate-y-1"
-				To: "opacity-100 translate-y-0"
-			  Leaving: "transition ease-in duration-150"
-				From: "opacity-100 translate-y-0"
-				To: "opacity-0 translate-y-1"
-			-->
-					<div
-						class="absolute z-10 -ml-4 mt-3 w-screen max-w-md transform px-2 sm:px-0 lg:left-1/2 lg:ml-0 lg:-translate-x-1/2">
-						<div class="overflow-hidden rounded-lg shadow-lg ring-1 ring-black ring-opacity-5">
-							<div class="relative grid gap-6 bg-white px-5 py-6 sm:gap-8 sm:p-8">
-								<a href="#" class="-m-3 flex items-start rounded-lg p-3 hover:bg-gray-50">
-									<!-- Heroicon name: outline/chart-bar -->
-									<svg
-										class="h-6 w-6 flex-shrink-0 text-indigo-600"
-										xmlns="http://www.w3.org/2000/svg"
-										fill="none"
-										viewBox="0 0 24 24"
-										stroke="currentColor"
-										aria-hidden="true">
-										<path
-											stroke-linecap="round"
-											stroke-linejoin="round"
-											stroke-width="2"
-											d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z" />
-									</svg>
-									<div class="ml-4">
-										<p class="text-base font-medium text-gray-900">Analytics</p>
-										<p class="mt-1 text-sm text-gray-500">
-											Get a better understanding of where your traffic is coming from.
-										</p>
-									</div>
-								</a>
-
-								<a href="#" class="-m-3 flex items-start rounded-lg p-3 hover:bg-gray-50">
-									<!-- Heroicon name: outline/cursor-click -->
-									<svg
-										class="h-6 w-6 flex-shrink-0 text-indigo-600"
-										xmlns="http://www.w3.org/2000/svg"
-										fill="none"
-										viewBox="0 0 24 24"
-										stroke="currentColor"
-										aria-hidden="true">
-										<path
-											stroke-linecap="round"
-											stroke-linejoin="round"
-											stroke-width="2"
-											d="M15 15l-2 5L9 9l11 4-5 2zm0 0l5 5M7.188 2.239l.777 2.897M5.136 7.965l-2.898-.777M13.95 4.05l-2.122 2.122m-5.657 5.656l-2.12 2.122" />
-									</svg>
-									<div class="ml-4">
-										<p class="text-base font-medium text-gray-900">Engagement</p>
-										<p class="mt-1 text-sm text-gray-500">
-											Speak directly to your customers in a more meaningful way.
-										</p>
-									</div>
-								</a>
-
-								<a href="#" class="-m-3 flex items-start rounded-lg p-3 hover:bg-gray-50">
-									<!-- Heroicon name: outline/shield-check -->
-									<svg
-										class="h-6 w-6 flex-shrink-0 text-indigo-600"
-										xmlns="http://www.w3.org/2000/svg"
-										fill="none"
-										viewBox="0 0 24 24"
-										stroke="currentColor"
-										aria-hidden="true">
-										<path
-											stroke-linecap="round"
-											stroke-linejoin="round"
-											stroke-width="2"
-											d="M9 12l2 2 4-4m5.618-4.016A11.955 11.955 0 0112 2.944a11.955 11.955 0 01-8.618 3.04A12.02 12.02 0 003 9c0 5.591 3.824 10.29 9 11.622 5.176-1.332 9-6.03 9-11.622 0-1.042-.133-2.052-.382-3.016z" />
-									</svg>
-									<div class="ml-4">
-										<p class="text-base font-medium text-gray-900">Security</p>
-										<p class="mt-1 text-sm text-gray-500">
-											Your customers&#039; data will be safe and secure.
-										</p>
-									</div>
-								</a>
-
-								<a href="#" class="-m-3 flex items-start rounded-lg p-3 hover:bg-gray-50">
-									<!-- Heroicon name: outline/view-grid -->
-									<svg
-										class="h-6 w-6 flex-shrink-0 text-indigo-600"
-										xmlns="http://www.w3.org/2000/svg"
-										fill="none"
-										viewBox="0 0 24 24"
-										stroke="currentColor"
-										aria-hidden="true">
-										<path
-											stroke-linecap="round"
-											stroke-linejoin="round"
-											stroke-width="2"
-											d="M4 6a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2H6a2 2 0 01-2-2V6zM14 6a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2h-2a2 2 0 01-2-2V6zM4 16a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2H6a2 2 0 01-2-2v-2zM14 16a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2h-2a2 2 0 01-2-2v-2z" />
-									</svg>
-									<div class="ml-4">
-										<p class="text-base font-medium text-gray-900">Integrations</p>
-										<p class="mt-1 text-sm text-gray-500">
-											Connect with third-party tools that you&#039;re already using.
-										</p>
-									</div>
-								</a>
-
-								<a href="#" class="-m-3 flex items-start rounded-lg p-3 hover:bg-gray-50">
-									<!-- Heroicon name: outline/refresh -->
-									<svg
-										class="h-6 w-6 flex-shrink-0 text-indigo-600"
-										xmlns="http://www.w3.org/2000/svg"
-										fill="none"
-										viewBox="0 0 24 24"
-										stroke="currentColor"
-										aria-hidden="true">
-										<path
-											stroke-linecap="round"
-											stroke-linejoin="round"
-											stroke-width="2"
-											d="M4 4v5h.582m15.356 2A8.001 8.001 0 004.582 9m0 0H9m11 11v-5h-.581m0 0a8.003 8.003 0 01-15.357-2m15.357 2H15" />
-									</svg>
-									<div class="ml-4">
-										<p class="text-base font-medium text-gray-900">Automations</p>
-										<p class="mt-1 text-sm text-gray-500">
-											Build strategic funnels that will drive your customers to convert
-										</p>
-									</div>
-								</a>
-							</div>
-							<div class="space-y-6 bg-gray-50 px-5 py-5 sm:flex sm:space-y-0 sm:space-x-10 sm:px-8">
-								<div class="flow-root">
-									<a
-										href="#"
-										class="-m-3 flex items-center rounded-md p-3 text-base font-medium text-gray-900 hover:bg-gray-100">
-										<!-- Heroicon name: outline/play -->
-										<svg
-											class="h-6 w-6 flex-shrink-0 text-gray-400"
-											xmlns="http://www.w3.org/2000/svg"
-											fill="none"
-											viewBox="0 0 24 24"
-											stroke="currentColor"
-											aria-hidden="true">
-											<path
-												stroke-linecap="round"
-												stroke-linejoin="round"
-												stroke-width="2"
-												d="M14.752 11.168l-3.197-2.132A1 1 0 0010 9.87v4.263a1 1 0 001.555.832l3.197-2.132a1 1 0 000-1.664z" />
-											<path
-												stroke-linecap="round"
-												stroke-linejoin="round"
-												stroke-width="2"
-												d="M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
-										</svg>
-										<span class="ml-3">Watch Demo</span>
-									</a>
-								</div>
-
-								<div class="flow-root">
-									<a
-										href="#"
-										class="-m-3 flex items-center rounded-md p-3 text-base font-medium text-gray-900 hover:bg-gray-100">
-										<!-- Heroicon name: outline/phone -->
-										<svg
-											class="h-6 w-6 flex-shrink-0 text-gray-400"
-											xmlns="http://www.w3.org/2000/svg"
-											fill="none"
-											viewBox="0 0 24 24"
-											stroke="currentColor"
-											aria-hidden="true">
-											<path
-												stroke-linecap="round"
-												stroke-linejoin="round"
-												stroke-width="2"
-												d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z" />
-										</svg>
-										<span class="ml-3">Contact Sales</span>
-									</a>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-
-				<a href="#" class="text-base font-medium text-gray-500 hover:text-gray-900"> Pricing </a>
-				<a href="#" class="text-base font-medium text-gray-500 hover:text-gray-900"> Docs </a>
-
-				<div class="relative">
-					<!-- Item active: "text-gray-900", Item inactive: "text-gray-500" -->
-					<button
-						type="button"
-						class="group inline-flex items-center rounded-md bg-white text-base font-medium text-gray-500 hover:text-gray-900 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2"
-						aria-expanded="false">
-						<span>More</span>
-						<!--
-				Heroicon name: solid/chevron-down
-  
-				Item active: "text-gray-600", Item inactive: "text-gray-400"
-			  -->
-						<svg
-							class="ml-2 h-5 w-5 text-gray-400 group-hover:text-gray-500"
-							xmlns="http://www.w3.org/2000/svg"
-							viewBox="0 0 20 20"
-							fill="currentColor"
-							aria-hidden="true">
-							<path
-								fill-rule="evenodd"
-								d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
-								clip-rule="evenodd" />
-						</svg>
-					</button>
-
-					<!--
-			  'More' flyout menu, show/hide based on flyout menu state.
-  
-			  Entering: "transition ease-out duration-200"
-				From: "opacity-0 translate-y-1"
-				To: "opacity-100 translate-y-0"
-			  Leaving: "transition ease-in duration-150"
-				From: "opacity-100 translate-y-0"
-				To: "opacity-0 translate-y-1"
-			-->
-					<div class="absolute left-1/2 z-10 mt-3 w-screen max-w-md -translate-x-1/2 transform px-2 sm:px-0">
-						<div class="overflow-hidden rounded-lg shadow-lg ring-1 ring-black ring-opacity-5">
-							<div class="relative grid gap-6 bg-white px-5 py-6 sm:gap-8 sm:p-8">
-								<a href="#" class="-m-3 flex items-start rounded-lg p-3 hover:bg-gray-50">
-									<!-- Heroicon name: outline/support -->
-									<svg
-										class="h-6 w-6 flex-shrink-0 text-indigo-600"
-										xmlns="http://www.w3.org/2000/svg"
-										fill="none"
-										viewBox="0 0 24 24"
-										stroke="currentColor"
-										aria-hidden="true">
-										<path
-											stroke-linecap="round"
-											stroke-linejoin="round"
-											stroke-width="2"
-											d="M18.364 5.636l-3.536 3.536m0 5.656l3.536 3.536M9.172 9.172L5.636 5.636m3.536 9.192l-3.536 3.536M21 12a9 9 0 11-18 0 9 9 0 0118 0zm-5 0a4 4 0 11-8 0 4 4 0 018 0z" />
-									</svg>
-									<div class="ml-4">
-										<p class="text-base font-medium text-gray-900">Help Center</p>
-										<p class="mt-1 text-sm text-gray-500">
-											Get all of your questions answered in our forums or contact support.
-										</p>
-									</div>
-								</a>
-
-								<a href="#" class="-m-3 flex items-start rounded-lg p-3 hover:bg-gray-50">
-									<!-- Heroicon name: outline/bookmark-alt -->
-									<svg
-										class="h-6 w-6 flex-shrink-0 text-indigo-600"
-										xmlns="http://www.w3.org/2000/svg"
-										fill="none"
-										viewBox="0 0 24 24"
-										stroke="currentColor"
-										aria-hidden="true">
-										<path
-											stroke-linecap="round"
-											stroke-linejoin="round"
-											stroke-width="2"
-											d="M16 4v12l-4-2-4 2V4M6 20h12a2 2 0 002-2V6a2 2 0 00-2-2H6a2 2 0 00-2 2v12a2 2 0 002 2z" />
-									</svg>
-									<div class="ml-4">
-										<p class="text-base font-medium text-gray-900">Guides</p>
-										<p class="mt-1 text-sm text-gray-500">
-											Learn how to maximize our platform to get the most out of it.
-										</p>
-									</div>
-								</a>
-
-								<a href="#" class="-m-3 flex items-start rounded-lg p-3 hover:bg-gray-50">
-									<!-- Heroicon name: outline/calendar -->
-									<svg
-										class="h-6 w-6 flex-shrink-0 text-indigo-600"
-										xmlns="http://www.w3.org/2000/svg"
-										fill="none"
-										viewBox="0 0 24 24"
-										stroke="currentColor"
-										aria-hidden="true">
-										<path
-											stroke-linecap="round"
-											stroke-linejoin="round"
-											stroke-width="2"
-											d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z" />
-									</svg>
-									<div class="ml-4">
-										<p class="text-base font-medium text-gray-900">Events</p>
-										<p class="mt-1 text-sm text-gray-500">
-											See what meet-ups and other events we might be planning near you.
-										</p>
-									</div>
-								</a>
-
-								<a href="#" class="-m-3 flex items-start rounded-lg p-3 hover:bg-gray-50">
-									<!-- Heroicon name: outline/shield-check -->
-									<svg
-										class="h-6 w-6 flex-shrink-0 text-indigo-600"
-										xmlns="http://www.w3.org/2000/svg"
-										fill="none"
-										viewBox="0 0 24 24"
-										stroke="currentColor"
-										aria-hidden="true">
-										<path
-											stroke-linecap="round"
-											stroke-linejoin="round"
-											stroke-width="2"
-											d="M9 12l2 2 4-4m5.618-4.016A11.955 11.955 0 0112 2.944a11.955 11.955 0 01-8.618 3.04A12.02 12.02 0 003 9c0 5.591 3.824 10.29 9 11.622 5.176-1.332 9-6.03 9-11.622 0-1.042-.133-2.052-.382-3.016z" />
-									</svg>
-									<div class="ml-4">
-										<p class="text-base font-medium text-gray-900">Security</p>
-										<p class="mt-1 text-sm text-gray-500">
-											Understand how we take your privacy seriously.
-										</p>
-									</div>
-								</a>
-							</div>
-							<div class="bg-gray-50 px-5 py-5 sm:px-8 sm:py-8">
-								<div>
-									<h3 class="text-sm font-medium uppercase tracking-wide text-gray-500">
-										Recent Posts
-									</h3>
-									<ul role="list" class="mt-4 space-y-4">
-										<li class="truncate text-base">
-											<a href="#" class="font-medium text-gray-900 hover:text-gray-700">
-												Boost your conversion rate
-											</a>
-										</li>
-
-										<li class="truncate text-base">
-											<a href="#" class="font-medium text-gray-900 hover:text-gray-700">
-												How to use search engine optimization to drive traffic to your site
-											</a>
-										</li>
-
-										<li class="truncate text-base">
-											<a href="#" class="font-medium text-gray-900 hover:text-gray-700">
-												Improve your customer experience
-											</a>
-										</li>
-									</ul>
-								</div>
-								<div class="mt-5 text-sm">
-									<a href="#" class="font-medium text-indigo-600 hover:text-indigo-500">
-										View all posts <span aria-hidden="true">&rarr;</span></a
-									>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</nav>
+			<div class="hidden space-x-10 sm:order-3 md:flex">
+				<app-navbar-menu></app-navbar-menu>
+			</div>
 
 			<!-- Profile menu -->
 			<div class="items-center justify-end sm:order-4 md:flex md:flex-1 lg:w-0">
